--- a/WebRoot/home/shopcart.html
+++ b/WebRoot/home/shopcart.html
@@ -95,9 +95,9 @@
 						<div class="bundle  bundle-last ">
 							<div class="bundle-hd">
 								<div class="bd-promos">
-									<div class="bd-has-promo">已享优惠:<span class="bd-has-promo-content">省￥19.50</span>&nbsp;&nbsp;</div>
+									<div class="bd-has-promo">&nbsp;&nbsp;</div>
 									<div class="act-promo">
-										<a href="#" target="_blank">第二支半价，第三支免费<span class="gt">&gt;&gt;</span></a>
+										<a href="#" target="_blank"></span></a>
 									</div>
 									<span class="list-change theme-login">编辑</span>
 								</div>
@@ -124,9 +124,9 @@
 									</li>
 									<li class="td td-info">
 										<div class="item-props item-props-can">
-											<span class="sku-line">颜色：12#川南玛瑙</span>
-											<span class="sku-line">包装：裸装</span>
-											<span tabindex="0" class="btn-edit-sku theme-login">修改</span>
+											<span class="sku-line"></span>
+											<span class="sku-line"></span>
+											<span tabindex="0" class="btn-edit-sku theme-login"></span>
 											<i class="theme-login am-icon-sort-desc"></i>
 										</div>
 									</li>
@@ -134,7 +134,7 @@
 										<div class="item-price price-promo-promo">
 											<div class="price-content">
 												<div class="price-line">
-													<em class="price-original">78.00</em>
+													
 												</div>
 												<div class="price-line">
 													<em class="J_Price price-now" tabindex="0">39.00</em>
@@ -146,16 +146,14 @@
 										<div class="amount-wrapper ">
 											<div class="item-amount ">
 												<div class="sl">
-													<input class="min am-btn" name="" type="button" value="-" />
-													<input class="text_box" name="" type="text" value="3" style="width:30px;" />
-													<input class="add am-btn" name="" type="button" value="+" />
+													<em>1</em>
 												</div>
 											</div>
 										</div>
 									</li>
 									<li class="td td-sum">
 										<div class="td-inner">
-											<em tabindex="0" class="J_ItemSum number">117.00</em>
+											<em tabindex="0" class="J_ItemSum number">39.00</em>
 										</div>
 									</li>
 									<li class="td td-op">
